Game JS/CSS/HTM.

--- a/style.css
+++ b/style.css
@@ -76,4 +76,19 @@ h2 {
     cursor: pointer;
     box-shadow: 0 0.4rem 0 rgba(8, 114, 244, 0.6);
     transition: transform 150ms;
+    transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
+}
+
+#highscore-btn {
+    background: #a33aa3;
+}
+
+#highscore-btn:hover {
+    box-shadow: 0 0.4rem 0 rgba(8, 114, 244, 0.6);
 }
