--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h2 {
 
 .btn {
     font-size: 2.4rem;
-    padding: 2rem;
+    padding: 2rem 0;
     width: 30rem;
     text-align: center;
     margin-bottom: 1rem;
