--- a/game.css
+++ b/game.css
@@ -1,5 +1,5 @@
 body {
-    color: pink;
+    color: #ffff;
     margin-bottom: 0.08rem;
     width: 100%;
     border-radius: 4px;
@@ -7,6 +7,17 @@ body {
     font-size: 3rem;
     min-width: 80rem;
 
+}
+
+.choice-container {
+    display: flex;
+    margin-bottom: 0.8rem;
+    width: 100%;
+    border-radius: 4px;
+    background: pink;
+    font-size: 3rem;
+    min-width:80rem;
+    
 }
 
 .choice-container:hover {
