--- a/game.css
+++ b/game.css
@@ -17,7 +17,7 @@ body {
     background: pink;
     font-size: 3rem;
     min-width:80rem;
-    
+
 }
 
 .choice-container:hover {
@@ -59,6 +59,20 @@ body {
     text-align: center;
 }
 
+#progressBar {
+    width: 20rem;
+    height: 3rem;
+    border: 0.2rem solid purple;
+    margin-top: 2rem;
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+#progressBarFull {
+    height: 100%;
+    background: yellow;
+    width: 0%;
+}
 @media screen and (max-width: 768px) {
     .choice-container {
         min-width: 40rem;
