--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -9,10 +9,12 @@
 
 * {
    box-sizing: border-box; 
-   margin: 0;
+   margin: 2;
    padding: 0;
    font-size: 62.5%;
    font-family: 'Courier Prime', monospace;
+   justify-content: center;
+    align-items: center;
 }
 
 h1 {
@@ -24,6 +26,7 @@ h1 {
 h2 {
     font-size: 4.2rem;
     margin-bottom: 4rem;
+    
 }
 
 .container {
@@ -35,6 +38,7 @@ h2 {
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
+    color: black;
 }
 
 .flex-column {
