working out additional bugs.

--- a/assests/css/highscores.css
+++ b/assests/css/highscores.css
@@ -5,8 +5,8 @@ body {
 
 
 #highScoresList {
-    list-style: none;
-    margin-bottom: 4rem;
+    list-style: center;
+    /* margin-bottom: 4rem; */
 
 }
 
