--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -26,8 +26,16 @@ h1 {
 h2 {
     font-size: 4.2rem;
     margin-bottom: 4rem;
+    line-height: 2em
+   
+}
+
+input {
+    line-height: 20em; // 2em is (2 * default line height)
+    
     
 }
+
 
 .container {
     width: 100vw;
@@ -39,6 +47,7 @@ h2 {
     margin: 0 auto;
     padding: 2rem;
     color: black;
+    font-size: 3rem;
 }
 
 .flex-column {
